--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <style>
+      .canvas {
+          border: 1px solid;
+      }
+  </style>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -45,5 +50,27 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+<script>
+$(document).ready(function(){
+    $("#btn").click(function(){
+    $("#menu").toggleClass( "open" );
+    console.log("hola");
+    })
+    });
 
+
+    /*
+const btn = document.getElementById('btn');    
+const menu = document.getElementsByClassName('menu-bar');
+
+btn.addEventListener('click', ()=>
+{
+  console.log("hola");
+    menu.toggleClass('open');
+});*/
+</script>
 </html>
