--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,10 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
 <script>
 $(document).ready(function(){
     $("#btn").click(function(){
@@ -61,6 +65,19 @@ $(document).ready(function(){
     console.log("hola");
     })
     });
+
+    $( function() {
+    $( "#draggable" ).draggable();
+  } );
+
+  /*$('#mover').mousedown(()=>{
+    $( "#draggable" ).draggable();
+  })
+
+  $('#mover').mouseup(()=>{
+    $( "#draggable" ).draggable()
+  })*/
+
 
 
     /*
