--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,7 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <style>
-        .canvas {
-            border: 1px solid;
-        }
-    </style>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -52,18 +48,19 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+<script src="../src/components/pizarra/mover.js"></script>
 <script>
-    $(document).ready(function() {
-        $("#btn").click(function() {
-            $("#menu").toggleClass("open");
-            /* ("#draggable").draggable();*/
-            console.log("hola");
-        })
-    });
+  //  $(document).ready(function() {
+   //     $("#btn").click(function() {
+     //       $("#menu").toggleClass("open");
+    //         ("#draggable").draggable();
+     //       console.log("hola");
+     //   })
+  // })
 
-    $(function() {
-        $("#draggable").draggable();
-    });
+    
+        $("#draggable").draggable({ cursor: "move", scroll: false });
+ 
 
     /*$('#mover').mousedown(()=>{
       $( "#draggable" ).draggable();
