adventence for class a classname

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,41 @@
-<!DOCTYPE html> 
-<html lang="es"> 
- 
-<head> 
-    <meta charset="utf-8" /> 
-    <!--icon de playtec academy--> 
-    <link rel="shortcut icon" href="http://www.playtecgroup.com/assets/media/icon.png" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-    <meta name="theme-color" content="#000000" /> 
-    <meta name="description" content="Plataforma educativa para profesores y estudiantes" /> 
-    <!--letra--> 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">  
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> --> 
-    <!-- grupo de desarrollo --> 
- 
-    <meta name="author" content="PlayTec Developers"> 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"> 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
-    <title>PlayTec Academy</title> 
-</head> 
- 
-<body> 
-    <noscript>You need to enable JavaScript to run this app.</noscript> 
-    <div id="root" style="width: 100%;"></div> 
- 
-</body> 
-<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <!--icon de playtec academy-->
+    <link
+      rel="shortcut icon"
+      href="http://www.playtecgroup.com/assets/media/icon.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Plataforma educativa para profesores y estudiantes"
+    />
+    <!--letra-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <!-- grupo de desarrollo -->
+
+    <meta name="author" content="PlayTec Developers" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>PlayTec Academy</title>
+  </head>
+
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root" style="width: 100%;"></div>
+  </body>
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script> 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> --> 
-</html> 
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
+</html>
